; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_dc395x.c_msgin_set_async.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_dc395x.c_msgin_set_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AdapterCtlBlk = type { i32 }
%struct.ScsiReqBlk = type { i32, %struct.DeviceCtlBlk* }
%struct.DeviceCtlBlk = type { i32, i32, i64, i32, i32 }

@KERN_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"msgin_set_async: No sync transfers <%02i-%i>\0A\00", align 1
@SYNC_NEGO_ENABLE = common dso_local global i32 0, align 4
@SYNC_NEGO_DONE = common dso_local global i32 0, align 4
@SRB_DO_SYNC_NEGO = common dso_local global i32 0, align 4
@WIDE_NEGO_ENABLE = common dso_local global i32 0, align 4
@WIDE_NEGO_DONE = common dso_local global i32 0, align 4
@DC395x_ENABLE_MSGOUT = common dso_local global i32 0, align 4
@DBG_0 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"msgin_set_async(rej): Try WDTR anyway\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.AdapterCtlBlk*, %struct.ScsiReqBlk*)* @msgin_set_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msgin_set_async(%struct.AdapterCtlBlk* %0, %struct.ScsiReqBlk* %1) #0 {
  %3 = alloca %struct.AdapterCtlBlk*, align 8
  %4 = alloca %struct.ScsiReqBlk*, align 8
  %5 = alloca %struct.DeviceCtlBlk*, align 8
  store %struct.AdapterCtlBlk* %0, %struct.AdapterCtlBlk** %3, align 8
  store %struct.ScsiReqBlk* %1, %struct.ScsiReqBlk** %4, align 8
  %6 = load %struct.ScsiReqBlk*, %struct.ScsiReqBlk** %4, align 8
  %7 = getelementptr inbounds %struct.ScsiReqBlk, %struct.ScsiReqBlk* %6, i32 0, i32 1
  %8 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %7, align 8
  store %struct.DeviceCtlBlk* %8, %struct.DeviceCtlBlk** %5, align 8
  %9 = load i32, i32* @KERN_DEBUG, align 4
  %10 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %11 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %10, i32 0, i32 4
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %14 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @dprintkl(i32 %9, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %15)
  %17 = load i32, i32* @SYNC_NEGO_ENABLE, align 4
  %18 = xor i32 %17, -1
  %19 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %20 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = and i32 %21, %18
  store i32 %22, i32* %20, align 8
  %23 = load i32, i32* @SYNC_NEGO_DONE, align 4
  %24 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %25 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = or i32 %26, %23
  store i32 %27, i32* %25, align 8
  %28 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %29 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %28, i32 0, i32 2
  store i64 0, i64* %29, align 8
  %30 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %31 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %30, i32 0, i32 1
  store i32 50, i32* %31, align 4
  %32 = load i32, i32* @SRB_DO_SYNC_NEGO, align 4
  %33 = xor i32 %32, -1
  %34 = load %struct.ScsiReqBlk*, %struct.ScsiReqBlk** %4, align 8
  %35 = getelementptr inbounds %struct.ScsiReqBlk, %struct.ScsiReqBlk* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = and i32 %36, %33
  store i32 %37, i32* %35, align 8
  %38 = load %struct.AdapterCtlBlk*, %struct.AdapterCtlBlk** %3, align 8
  %39 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %40 = call i32 @reprogram_regs(%struct.AdapterCtlBlk* %38, %struct.DeviceCtlBlk* %39)
  %41 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %42 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @WIDE_NEGO_ENABLE, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %62

47:                                               ; preds = %2
  %48 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %49 = getelementptr inbounds %struct.DeviceCtlBlk, %struct.DeviceCtlBlk* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = load i32, i32* @WIDE_NEGO_DONE, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %62, label %54

54:                                               ; preds = %47
  %55 = load %struct.AdapterCtlBlk*, %struct.AdapterCtlBlk** %3, align 8
  %56 = load %struct.DeviceCtlBlk*, %struct.DeviceCtlBlk** %5, align 8
  %57 = load %struct.ScsiReqBlk*, %struct.ScsiReqBlk** %4, align 8
  %58 = call i32 @build_wdtr(%struct.AdapterCtlBlk* %55, %struct.DeviceCtlBlk* %56, %struct.ScsiReqBlk* %57)
  %59 = load i32, i32* @DC395x_ENABLE_MSGOUT, align 4
  %60 = load i32, i32* @DBG_0, align 4
  %61 = call i32 @dprintkdbg(i32 %60, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %62

62:                                               ; preds = %54, %47, %2
  ret void
}

declare dso_local i32 @dprintkl(i32, i8*, i32, i32) #1

declare dso_local i32 @reprogram_regs(%struct.AdapterCtlBlk*, %struct.DeviceCtlBlk*) #1

declare dso_local i32 @build_wdtr(%struct.AdapterCtlBlk*, %struct.DeviceCtlBlk*, %struct.ScsiReqBlk*) #1

declare dso_local i32 @dprintkdbg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
